objects/BMCServiceDesk__ClientUrgency__c.object
<CustomObject>
    <description>This object allows you to store data for the urgency assigned to clients.</description>
    <fields>
        <fullName>BMCServiceDesk__FKClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client</description>
        <label>FKClient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserUrgencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Urgency</description>
        <label>FKUrgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipName>UserUrgencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__clientName__c</fullName>
        <formula>BMCServiceDesk__FKClient__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__urgencyName__c</fullName>
        <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency Name</label>
        <type>Text</type>
    </fields>
    <label>ClientUrgency</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Staff Urgency</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClientUrgencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>